--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,9 @@
         <link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/styles/main.css">
         <!--[if lt ie 9]><script type="text/javascript" src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
         <script data-config="scripts/config" data-main="scripts/main" src="{{ site.baseurl }}/sea/sea.js"></script>
+        <script data-config="scripts/config" data-main="scripts/main" src="{{ site.baseurl }}/scripts/jquery-2.0.3.js"></script>
+        <script data-config="scripts/config" data-main="scripts/main" src="{{ site.baseurl }}/scripts/underscore-min.js"></script>
+        <script data-config="scripts/config" data-main="scripts/main" src="{{ site.baseurl }}/scripts/backbone-min.js"></script>
     </head>
     <body>
         <!--[if gte ie 8]><!-->
