--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
                         <header class="blog-header">
                             <h1 class="blog-title">WNLee's Blog</h1>
                             <p>I'm WeiNanLee,This my personal blog!</p>
-                            <p class="link-github-con"><a href="https://github.com/Geek-Lee" target="_blank">Link Github</a></p>
+                            <p class="link-github-con"><a href="https://github.com/Geek-Lee" target="_blank">Link To Github</a></p>
                         </header>
                         <nav class="page-nav">
                             <ul>
@@ -132,7 +132,7 @@
                                     <p>Email: GeekLee202@gmail.com /</p>
                                 </div>  
                             </div>
-                            <footer class="footer"><a href="GeekLee2020@gmail.com" target="_blank">Link Me</a><a target="_blank" href="http://www.cnblogs.com/geek-lee/">CnBlogs</a><a target="_blank" href="http://weibo.com/17aiba">WeiBo</a></footer>
+                            <footer class="footer"><a href="GeekLee2020@gmail.com" target="_blank">Contact Me</a><a target="_blank" href="http://www.cnblogs.com/geek-lee/">CnBlogs</a><a target="_blank" href="http://weibo.com/17aiba">WeiBo</a></footer>
                         </div>
                     </div><!--滚动页面-->
                 </div><!--主要内容-->
