--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,7 +101,7 @@
                     </div>
                     <div class="info-container">
                         <p><span>书名:</span> 
-                            <a href=<%= url %>>
+                            <a href=<%= alt %> target="_blank">
                                 <%= title %>
                             </a>
                         </p>
