--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,8 +22,8 @@
             <button class="site-nav-logo button-transition"><span  title="Site Navigation">W</span></button><!--导航按钮-->
             <div class="site-nav-container">
                 <ul class="site-list-item">
-                    <li><a href="{{ site.baseurl }}/index.html" class="list-item-btn" id="home">Home</a></li>
-                    <li><a href="{{ site.baseurl }}/index.html#collection" class="list-item-btn" id="collection">Collection</a></li>
+                    <li><a href="{{ site.baseurl }}/" class="list-item-btn" id="home">Home</a></li>
+                    <li><a href="{{ site.baseurl }}/#collection" class="list-item-btn" id="collection">Collection</a></li>
                 </ul>
             </div><!--导航内容容器-->
         </nav><!--导航结尾-->
@@ -49,9 +49,9 @@
                         </header>
                         <nav class="page-nav">
                             <ul>
-                                <li><a href="{{ site.baseurl }}/index.html#blogs" id="blogsID" class="hover">Blogs List</a></li>
-                                <li><a href="{{ site.baseurl }}/index.html#books" id="booksID">Books List</a></li>
-                                <li><a href="{{ site.baseurl }}/index.html#about" id="aboutID">About Me</a></li>
+                                <li><a href="{{ site.baseurl }}/#blogs" id="blogsID" class="hover">Blogs List</a></li>
+                                <li><a href="{{ site.baseurl }}/#books" id="booksID">Books List</a></li>
+                                <li><a href="{{ site.baseurl }}/#about" id="aboutID">About Me</a></li>
                             </ul>
                         </nav>
                         <div class="background-white">
