--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,12 +18,19 @@
     <body>
         <!--[if gte ie 8]><!-->
         <!--导航开始-->
-        <nav class="site-nav">
+        <nav class="site-nav m-site-nav-trasition">
             <button class="site-nav-logo button-transition"><span  title="Site Navigation">W</span></button><!--导航按钮-->
             <div class="site-nav-container">
+                <div class="m-site-logo-bar">
+                    <a href="http://github.wnlee.com" class="m-site-nav-logo"><span>W</span></a>
+                    <button class="m-site-nav-logo-btn">三</button>
+                </div>
                 <ul class="site-list-item">
                     <li><a href="{{ site.baseurl }}/" class="list-item-btn" id="home">Home</a></li>
-                    <li><a href="{{ site.baseurl }}/#collection" class="list-item-btn" id="collection">Collection</a></li>
+                    <!-- <li><a href="{{ site.baseurl }}/#collection" class="list-item-btn" id="collection">Collection</a></li> -->
+                    <li><a href="{{ site.baseurl }}/#blogs" class="list-item-btn">Blogs List</a></li>
+                    <li><a href="{{ site.baseurl }}/#books" class="list-item-btn">Books List</a></li>
+                    <li><a href="{{ site.baseurl }}/#about" class="list-item-btn">About Me</a></li>
                 </ul>
             </div><!--导航内容容器-->
         </nav><!--导航结尾-->
