--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,7 @@
                                     <p>Email: GeekLee2020@gmail.com /</p>
                                 </div>  
                             </div>
-                            <footer class="footer"><a href="GeekLee2020@gmail.com" target="_blank">Contact Me</a><a target="_blank" href="http://www.cnblogs.com/geek-lee/">CnBlogs</a><a target="_blank" href="http://weibo.com/17aiba">WeiBo</a></footer>
+                            <footer class="footer"><a href="mailto:GeekLee2020@gmail.com">Contact Me</a><a target="_blank" href="http://www.cnblogs.com/geek-lee/">CnBlogs</a><a target="_blank" href="http://weibo.com/17aiba">WeiBo</a></footer>
                         </div>
                     </div><!--滚动页面-->
                 </div><!--主要内容-->
