--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1, maximum-scale=1, user-scalable=no" />
         <link rel="shortcut icon" href="{{ site.baseurl }}/images/bitbug_favicon.ico" />
         <link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/styles/reset.min.css">
         <link type="text/css" rel="stylesheet" href="{{ site.baseurl }}/styles/markdown.css">
