--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@
                     <button class="m-site-nav-logo-btn">三</button>
                 </div>
                 <ul class="site-list-item">
-                    <li><a href="{{ site.baseurl }}/" class="list-item-btn" id="home">Home</a></li>
+                    <li><a href="{{ site.baseurl }}/#blogs" class="list-item-btn" id="home">Home</a></li>
                     <!-- <li><a href="{{ site.baseurl }}/#collection" class="list-item-btn" id="collection">Collection</a></li> -->
                     <li><a href="{{ site.baseurl }}/#blogs" class="list-item-btn">Blogs List</a></li>
                     <li><a href="{{ site.baseurl }}/#books" class="list-item-btn">Books List</a></li>
