--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,7 +52,7 @@
                         <header class="blog-header">
                             <h1 class="blog-title">WNLee's Blog</h1>
                             <p>I'm WeiNanLee, This is my personal blog!</p>
-                            <p class="link-github-con"><a href="https://github.com/Geek-Lee" target="_blank">Link To Github</a></p>
+                            <p class="link-github-con"><a href="https://github.com/WNLee" target="_blank">Link To Github</a></p>
                         </header>
                         <nav class="page-nav">
                             <ul>
